--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -47,27 +47,28 @@ jobs:
       - name: Run Unit Tests
         run: npm run test -- --watch=false --browsers=ChromeHeadless
 
-notify:
-  name: Send Email Notification
-  runs-on: ubuntu-latest
-  needs: [build, test] # Ensure this job runs after both build and test jobs
-  if: always() # Always run this job regardless of success or failure
-  steps:
-    - name: Send Success Email
-      if: needs.build.result == 'success' && needs.test.result == 'success'
-      uses: dawidd6/action-send-mail@v3
-      with:
-        server_address: smtp.gmail.com
-        server_port: 587
-        username: ${{ secrets.EMAIL_USERNAME }}
-        password: ${{ secrets.SMTP_PASSWORD }}
-        from: ${{ secrets.EMAIL_USERNAME }} # Add this line
-        to: ramathabathemokete@gmail.com
-        subject: "Angular Component - Success"
-        body: |
-          Hi Team,
-          I’m thrilled to let you know that our Angular Component has passed successfully! 🚀 The Build and Test jobs completed without any issues.
-          Your commitment to quality and excellence is truly inspiring. With each successful pipeline, we move closer to delivering exceptional value to our users.
+  notify:
+    name: Send Email Notification
+    runs-on: ubuntu-latest
+    needs: [build, test] # Ensure this job runs after both build and test jobs
+    if: always() # Always run this job regardless of success or failure
+    steps:
+      - name: Send Success Email
+        if: needs.build.result == 'success' && needs.test.result == 'success'
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 587
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.SMTP_PASSWORD }}
+          from: ${{ secrets.EMAIL_USERNAME }}
+          to: ramathabathemokete@gmail.com
+          subject: "Angular Component - Success"
+          body: |
+            Hi Team,
+            I’m thrilled to let you know that our Angular Component has passed successfully! 🚀 The Build and Test jobs completed without any issues.
+            Your commitment to quality and excellence is truly inspiring. With each successful pipeline, we move closer to delivering exceptional value to our users.
+
   create-pr:
     name: Create PR from Feature to Main
     runs-on: ubuntu-latest
