--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -61,7 +61,7 @@ jobs:
           server_port: 587
           username: ramathabathemokete@gmail.com
           password: ${{ secrets.SMTP_PASSWORD }}
-          to: andrewmasin2285@gmail.com
+          to: andrewmasina2285@gmail.com
           from: ramathabathemokete@gmail.com
           subject: "Angular Component - Success"
           body: |
